# rsde

./: .gitignore  AGENTS.md  Cargo.toml  DNS_CONFIGURATION.md  Dockerfile  GITHUB_ACTIONS_FIX.md  Makefile  README.md  VM_CLUSTER_TROUBLESHOOTING.md  config.example.toml  coredns-nodeport.yaml  dnsmasq-k8s.conf
.github/workflows/: release.yml  rsync-ci.yml
anybox/: Cargo.toml  README.md
anybox/src/: lib.rs  models.rs  storage.rs
apiserver/: Cargo.toml
apiserver/src/: anybox.rs  datalink_engine.rs  image.rs  job_manage.rs  lib.rs  main.rs  nodemanage.rs  ocr.rs  prompt.rs
apiserver/src/object_storage/: dto.rs  error.rs  mod.rs  qiniu.rs  service.rs
apiserver/tests/: app_assembly.rs  datalink_engine_routes.rs  job_manage_routes.rs  nodemanage_routes.rs  object_storage_routes.rs  static_frontend_routes.rs
common/config/: Cargo.toml  README.md
common/config/src/: anybox.rs  apiserver.rs  datalink_engine.rs  image_host.rs  lib.rs  mysql.rs  nodemanage.rs  object_storage.rs  ocr.rs  prompt.rs  redis.rs  rsagent.rs  rsync.rs
common/util/: Cargo.toml
common/util/src/: lib.rs
common/util/src/client/: kafka.rs  mod.rs  mysql.rs  redis.rs  ssh.rs
common/util/src/db/: mysql.rs
common/util/src/log/: logger.rs
common/util/src/metrics/: http.rs  mod.rs  registry.rs
common/util/src/metrics/business/: image.rs  mod.rs  ocr.rs
common/util/src/net/http/: mod.rs  request.rs  request_test.rs
common/util/src/net/tcp/: dial.rs  dial_test.rs  mod.rs
common/util/tests/: db_client.rs
conquer/: .gitignore  Cargo.toml  README.md
conquer/lib/rsync/: Cargo.toml
conquer/lib/rsync/src/: source.rs
conquer/lib/server/: Cargo.toml
conquer/lib/server/src/: http_server.rs  lib.rs  player.rs
conquer/lib/util/: Cargo.toml
conquer/lib/util/src/: lib.rs
conquer/src/: command.rs  main.rs
datalink-engine/: Cargo.toml  README.md
datalink-engine/src/: bootstrap.rs  error.rs  lib.rs  models.rs  repository.rs  service.rs
datalink-engine/src/storage/: memory.rs  mod.rs  mysql.rs
datalink-engine/tests/: domain.rs  repository.rs  service.rs
demo-1024/: Cargo.toml
demo-1024/src/: main.rs
doc/: ANYBOX_SUMMARY.md  DNS_CONFIGURATION.md  IMAGE_UPLOAD_OCR.md  K3S_COREDNS_CONFIG.md  VICTORIAMETRICS_QUERY_GUIDE.md  VMAGENT_GUIDE.md  VM_DEPLOYMENT_SUMMARY.md  VM_QUICK_REFERENCE.md  VM_USAGE_SUMMARY.md  datalink-engine-api契约.md  datalink-engine-rust接口草案.md  datalink-engine代码目录设计.md  datalink-engine概述.md  job-manage 与 rsagent 通信协议.md  job-manage概述.md  job-manage详细设计.md  networkmanager-dns.conf  nodemanage安装制品模型设计.md  nodemanage概述.md  nodemanage详细设计.md  query-engine概述.md  query-engine详细设计.md  rsagent概述.md  rsagent详细设计.md  vm-test-data.sh  vmagent-deployment.yaml  vm介绍.md  命令行工具整理.md  服务端架构设计规范.md  研发事项规范.md  组件实现_plan.md  项目架构图.md
docs/superpowers/plans/: 2026-05-17-ssh-client-implementation.md  2026-05-25-nodemanage-persistence-installer.md
docs/superpowers/specs/: 2026-05-17-ssh-client-wrapper-design.md  2026-05-25-nodemanage-persistence-installer-design.md
helm/: CHEATSHEET.txt
helm/rsde/: .helmignore  Chart.yaml  README.md  values-example.yaml
helm/rsde/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml  service.yaml
job-manage/: Cargo.toml
job-manage/src/: error.rs  lib.rs  models.rs  service.rs
job-manage/tests/: precheck.rs  task_sync.rs
k8s/docker-compose/: README.md  docker-compose.yaml
k8s/file-transfer-go/: README.md  deploy.sh
k8s/file-transfer-go/helm/file-transfer-go/: Chart.yaml  README.md  values-example.yaml
k8s/opencode/: README.md  deploy.sh
k8s/opencode/helm/opencode/: .helmignore  Chart.yaml  README.md
nodemanage/: Cargo.toml
nodemanage/src/: bootstrap.rs  error.rs  lib.rs  models.rs  protocol.rs  repository.rs  service.rs
nodemanage/tests/: domain.rs  installer.rs  mysql_repository.rs  service.rs
pic_recog/: Cargo.toml  Makefile
pic_recog/src/: config.rs  error.rs  lib.rs  utils.rs
pic_recog/src/engines/: README.md  mod.rs  remote.rs
pic_recog/src/engines/tesseract/: config.rs  mod.rs  recognizer.rs  utils.rs
prompt/: Cargo.toml
prompt/src/: lib.rs  models.rs  storage.rs
py1015/: KAFKA_DEPLOYMENT_GUIDE.md  README.md  fix_kafka.sh  fix_kafka_connection.md  kafka_manager.py  requirements.txt  test_connection.py  test_sasl_connection.py
query-engine/: Cargo.toml
query-engine/src/: error.rs  lib.rs  memory.rs  models.rs  service.rs
query-engine/tests/: heartbeat_query.rs
rc/: Cargo.toml  README.md
rc/src/: lib.rs  main.rs
rc/src/api/: kafka.rs  mod.rs  mysql.rs  redis.rs
rsagent/: Cargo.toml
rsagent/src/: bootstrap.rs  config.rs  executor.rs  heartbeat.rs  lib.rs  main.rs  registration.rs  task_sync.rs
rsagent/src/clients/: job_manage.rs  mod.rs  nodemanage.rs  victoria_metrics.rs
rsagent/tests/: executor.rs  heartbeat.rs  sync.rs  task_sync.rs
rsync/: Cargo.toml  Dockerfile  Makefile  RELEASE.md  config.toml  example.toml  test.rule.toml
rsync/doc/: CI_CD.md  GITHUB_CICD_WIKI.md  QUICKSTART_CI.md
rsync/helm/rsync/: Chart.yaml  values.yaml
rsync/helm/rsync/templates/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
rsync/helm/rsync/templates/tests/: test-connection.yaml
rsync/lib/rule/: Cargo.toml  DESIGN.md  PLATFORM.md  README.md
rsync/lib/rule/src/: controller.rs  datatransferconfig_test.rs  event.rs  file.rs  lib.rs  platform_examples.rs  rule.rs  rule_file_watch.rs
rsync/lib/util/: Cargo.toml
rsync/lib/util/src/log/: log.rs  logger.rs  mod.rs
rsync/src/: main.rs
test/plan/: tp_kafka_client.rs  tp_pic_recog_basic.rs  tp_pic_recog_remote.rs  tp_ssh_client.rs
webserver/: Cargo.toml  Makefile  README.md
webserver/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
webserver/frontend/src/: App.css  App.tsx  index.css
webserver/frontend/src/components/: Layout.css  Layout.tsx
webserver/frontend/src/data/: homePageData.ts  index.ts  rcToolsData.ts
webserver/frontend/src/pages/: AnyboxPage.tsx  HomePage.css  HomePage.tsx  ObjectStoragePage.css  ObjectStoragePage.test.tsx  (+6 more)
(+10 files in other folders)
