[workspace]
members = ["rsync", "rc", "common/*", "apiserver", "pic_recog", "anybox"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
typetag = "0.2.21"
toml = "0.9.8"
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
tracing = { version = "0.1", features = ["log-always", "max_level_debug"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "serde_json",
] }
tracing-appender = "0.2"
uuid = { version = "1.9", features = ["serde", "v4"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
rand = "0.8"
redis = { version = "0.27", features = [
    "tokio-comp",
    "aio",
    "connection-manager",
] }
chrono = { version = "0.4", features = ["serde"] }
snafu = { version = "0.8.9", features = ["std", "rust_1_81", "alloc"] }
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
rdkafka = { version = "0.36", features = ["tokio"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
prometheus = "0.14.0"
lazy_static = "1.4"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
metrics-util = "0.20"
mysql_async = { version = "0.36", default-features = false, features = ["minimal"] }
