[package]
name = "apiserver"
edition.workspace = true
version.workspace = true

[dependencies]
util = { path = "../common/util", features = ["metrics"] }
core = { path = "../common/core" }
config = { path = "../common/config" }
pic_recog = { path = "../pic_recog" }
anybox = { path = "../anybox" }
prompt = { path = "../prompt" }
rc = { path = "../rc" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
metrics = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
