[package]
name = "apiserver"
edition.workspace = true
version.workspace = true

[[bin]]
name = "apiserver"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
util = { path = "../common/util", features = ["metrics"] }
config = { path = "../common/config" }
pic_recog = { path = "../pic_recog" }
anybox = { path = "../anybox" }
prompt = { path = "../prompt" }
nodemanage = { path = "../nodemanage" }
rc = { path = "../rc" }
datalink-engine = { path = "../datalink-engine" }
job-manage = { path = "../job-manage" }
query-engine = { path = "../query-engine" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true, features = ["util"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
metrics = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
futures = { workspace = true }
qiniu-sdk = { version = "0.2", default-features = false, features = ["async", "credential", "http", "http-client", "objects", "upload", "upload-token", "reqwest"] }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
