[workspace]
members = [
    "lib/server",
    "lib/util",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package]
name = "conquer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
snafu = { version = "0.8.9", features = ["std", "rust_1_81", "alloc"] }
tokio = { version = "1.48.0", features = ["full"] }
server = { path = "lib/server" }
util = { path = "lib/util" }

[[bin]]
name = "conquer"
path = "src/main.rs"