[package]
name = "nodemanage"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
config = { path = "../common/config" }
mysql_async = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
