[package]
name = "pic_recog"
edition.workspace = true
version.workspace = true

[dependencies]
tesseract-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
base64 = "0.21"
image = { version = "0.25", default-features = false, features = [
    "bmp",
    "gif",
    "jpeg",
    "png",
    "tiff",
    "webp",
] }
toml = { workspace = true }
sha1 = "0.10"

[[test]]
# 集成测试目录
name = "tp_pic_recog_basic"
path = "../test/plan/tp_pic_recog_basic.rs"

[[test]]
# 远程 OCR 接入测试
name = "tp_pic_recog_remote"
path = "../test/plan/tp_pic_recog_remote.rs"
