[package]
name = "rc"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rc"
path = "src/main.rs"

[lib]
name = "rc"
path = "src/lib.rs"

[dependencies]
util = { path = "../common/util" }
core = { path = "../common/core" }
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
