[package]
name = "rsagent"
edition.workspace = true
version.workspace = true

[[bin]]
name = "rsagent"
path = "src/main.rs"

[lib]
name = "rsagent"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
config = { path = "../common/config" }
job-manage = { path = "../job-manage" }
nodemanage = { path = "../nodemanage" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
