[package]
name = "rsync"
version.workspace = true
edition.workspace = true

[dependencies]
rule = { path = "lib/rule" }
util = { path = "lib/util" }
tokio.workspace = true

[workspace]
members = ["lib/core", "lib/rule", "lib/util"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
typetag = "0.2.21"
toml = "0.9.8"
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"

[[bin]]
name = "rsync"
path = "src/main.rs"
