[package]
name = "rsync"
version.workspace = true
edition.workspace = true

[dependencies]
rule = { path = "lib/rule" }
util = { path = "../common/util" }
tokio = { workspace = true }
tracing = { workspace = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde_json = { workspace = true }

[[bin]]
name = "rsync"
path = "src/main.rs"
