[package]
name = "rsync"
version.workspace = true
edition.workspace = true

[dependencies]
rule = { path = "lib/rule" }
util = { path = "../common/util" }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[[bin]]
name = "rsync"
path = "src/main.rs"
