[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
snafu = { version = "0.8.9", features = ["std", "rust_1_81", "alloc"] }
tracing = { version = "0.1.41", features = [
    "async-await",
    "log-always",
    "max_level_debug",
] }
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "json",
    "serde_json",
] }
tracing-appender = "0.2.3"
