[package]
name = "util"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
snafu.workspace = true
tracing = { workspace = true, features = ["async-await"] }
tracing-subscriber.workspace = true
tracing-appender.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
