[package]
name = "util"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
snafu.workspace = true
tracing = { workspace = true, features = ["async-await"] }
tracing-subscriber.workspace = true
tracing-appender.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rdkafka.workspace = true
redis.workspace = true
futures.workspace = true
chrono.workspace = true
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-util = { workspace = true }
axum = { workspace = true, optional = true }

[features]
default = []
metrics = ["dep:axum"]

[[test]]
# Kafka client 集成测试
name = "tp_kafka_client"
path = "../../test/plan/tp_kafka_client.rs"
