[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.6", features = ["macros"] }
tower = { version = "0.5", features = ["limit"] }
snafu = { version = "0.8.9", features = ["std", "rust_1_81", "alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
