[package]
name = "rule"
version = "0.1.0"
edition = "2024"

[dependencies]
typetag = "0.2.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1.0", features = ["sync", "rt", "time", "fs", "macros"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
