[package]
name = "util"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
snafu = { version = "0.8.9", features = ["std", "rust_1_81", "alloc"] }
tracing = { version = "0.1.41", features = [
    "async-await",
    "log-always",
    "max_level_debug",
] }
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "json",
    "serde_json",
] }
tracing-appender = "0.2.3"
